--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
       - name: Install python3
-        uses: actions/setup-python@master
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.x'
+          architecture: 'x64'
       - name: Install packages
         run: |
           pip3 install requests
